--- a/client/package.json
+++ b/client/package.json
@@ -32,6 +32,7 @@
     "webpack-dev-server": "^4.3.0"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "d3": "^7.1.1",
     "react": "^17.0.2",
     "react-cookie": "^4.1.1",
