--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
 CLIENT_ID=c80dc2ae16884491b82fca219719f0c4
 CLIENT_SECRET=f41e617c5d9a4180b93d9073d8510811
-REDIRECT_URI=http://localhost:8080
+REDIRECT_URI=http://localhost:8080/profile
