--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/d3": "^7.1.0",
+    "@types/js-cookie": "^3.0.1",
     "@types/react": "^17.0.26",
     "@types/react-dom": "^17.0.9",
     "@types/react-router": "^5.1.16",
@@ -34,9 +35,10 @@
   "dependencies": {
     "axios": "^0.24.0",
     "d3": "^7.1.1",
+    "js-cookie": "^3.0.1",
     "react": "^17.0.2",
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.3.0"
+    "react-router-dom": "^6.2.1"
   }
 }
