--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "@types/react-dom": "^17.0.9",
     "@types/react-router": "^5.1.16",
     "@types/react-router-dom": "^5.3.0",
+    "@types/uuid": "^8.3.4",
     "css-loader": "^6.3.0",
     "css-minimizer-webpack-plugin": "^3.0.2",
     "file-loader": "^6.2.0",
@@ -33,12 +34,17 @@
     "webpack-dev-server": "^4.3.0"
   },
   "dependencies": {
+    "@types/recharts": "^1.8.23",
     "axios": "^0.24.0",
     "d3": "^7.1.1",
+    "install": "^0.13.0",
     "js-cookie": "^3.0.1",
+    "npm": "^8.3.1",
     "react": "^17.0.2",
     "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.1"
+    "react-router-dom": "^6.2.1",
+    "recharts": "^2.1.8",
+    "uuid": "^3.4.0"
   }
 }
