--- a/client/package.json
+++ b/client/package.json
@@ -26,7 +26,7 @@
     "postcss-loader": "^6.1.1",
     "postcss-preset-env": "^6.7.0",
     "style-loader": "^3.3.0",
-    "tailwindcss": "^2.2.16",
+    "tailwindcss": "^3.0.15",
     "ts-loader": "^9.2.6",
     "typescript": "^4.4.3",
     "webpack": "^5.55.1",
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "@types/recharts": "^1.8.23",
+    "acorn": "^8.7.0",
     "axios": "^0.24.0",
     "d3": "^7.1.1",
     "install": "^0.13.0",
