--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "webpack-dev-server": "^4.3.0"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.5",
     "@types/recharts": "^1.8.23",
     "acorn": "^8.7.0",
     "axios": "^0.24.0",
