--- a/client/package.json
+++ b/client/package.json
@@ -49,6 +49,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "recharts": "^2.1.8",
-    "uuid": "^3.4.0"
+    "uuid": "^3.4.0",
+    "wicg-inert": "^3.1.1"
   }
 }
