--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "dev": "webpack-dev-server --mode development",
-    "build": "webpack --mode production"
+    "build": "webpack-dev-server --mode production"
   },
   "author": "Octavian",
   "license": "ISC",
@@ -18,6 +18,7 @@
     "@types/react-router": "^5.1.16",
     "@types/react-router-dom": "^5.3.0",
     "@types/uuid": "^8.3.4",
+    "compression-webpack-plugin": "^9.2.0",
     "css-loader": "^6.3.0",
     "css-minimizer-webpack-plugin": "^3.0.2",
     "file-loader": "^6.2.0",
@@ -28,8 +29,10 @@
     "postcss-preset-env": "^6.7.0",
     "style-loader": "^3.3.0",
     "tailwindcss": "^3.0.15",
+    "terser-webpack-plugin": "^5.3.0",
     "ts-loader": "^9.2.6",
     "typescript": "^4.4.3",
+    "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^5.55.1",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.3.0"
@@ -38,14 +41,10 @@
     "@heroicons/react": "^1.0.5",
     "@types/recharts": "^1.8.23",
     "acorn": "^8.7.0",
-    "axios": "^0.24.0",
-    "d3": "^7.1.1",
     "install": "^0.13.0",
     "js-cookie": "^3.0.1",
     "lodash.round": "^4.0.4",
-    "npm": "^8.3.1",
     "react": "^17.0.2",
-    "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.1",
     "recharts": "^2.1.8",
