--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\"",
-    "start": "nodemon server/index.js"
+    "start": "nodemon index.js"
   },
   "author": "Octavian",
   "license": "ISC",
