--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\"",
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "build:ui": "rm -rf build && cd ./client npm run build && cp -r build ../"
   },
   "author": "Octavian",
   "license": "ISC",
