--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\"",
-    "start": "nodemon index.js",
+    "start": "node index.js",
     "start:both": "concurrently --kill-others-on-fail \"npm run start\" \"npm run dev --prefix client\"",
     "build:ui": "rm -rf build && cd ./client npm run build && cp -r build ../"
   },
