--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\"",
     "start": "node index.js",
-    "start:both": "concurrently --kill-others-on-fail \"npm run start\" \"npm run dev --prefix client\"",
-    "build:ui": "rm -rf build && cd ./client npm run build && cp -r build ../"
+    "start:both": "concurrently --kill-others-on-fail \"npm run start:alt\" \"npm run dev --prefix client\"",
+    "build:ui": "rm -rf build && cd ./client npm run build && cp -r build ../",
+    "start:alt": "nodemon index.js"
   },
   "author": "Octavian",
   "license": "ISC",
