--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 CLIENT_ID=a8f787f034c549c2be783850c383388e
 CLIENT_SECRET=498d266849694d9c98c977bf1d5f5203
-REDIRECT_URI=https://statifyme.herokuapp.com/callback
+REDIRECT_URI=http://localhost:8080/callback
