--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "dev": "webpack-dev-server --mode development",
-    "build": "webpack --mode production"
+    "build": "webpack-dev-server --mode production"
   },
   "author": "Octavian",
   "license": "ISC",
@@ -39,6 +39,7 @@
     "webpack-dev-server": "^4.3.0"
   },
   "dependencies": {
+    "axios": "^0.25.0",
     "js-cookie": "^3.0.1",
     "lodash.round": "^4.0.4",
     "react": "^17.0.2",
