--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "dependencies": {
     "body-parser": "^1.19.1",
     "concurrently": "^7.0.0",
+    "connect-history-api-fallback": "^1.6.0",
     "cookie-parser": "^1.4.6",
     "cookie-session": "^2.0.0",
+    "cookies": "^0.8.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
